--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="location">
-        <h1 class="Location-timezone">timezone</h1>
+        <h1 class="location-timezone">timezone</h1>
         <div class="icon"></div>
     </div>
     <div class="temperature">
